--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<title>Baitul Ihsan</title>
-		<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="shortcut icon" href="favicon2.png">
 		<script src="theScript.js"></script>
@@ -10,16 +10,15 @@
 	<body>
 		<div id="header">
 			<ul>
-			<h1 style="position: absolute;width: 71px;height: 30px;left: 750px;top: 55px;">Donasi</h1>
-			<h1 style="position: absolute;width: 91px;height: 30px;left: 855px;top: 55px;">Kegiatan</h1>
-			<h1 style="position: absolute;width: 150px;height: 30px;left: 970px;top: 55px;">Tentang Kami</h1>	
+			<h1 style="position: absolute;left: 750px;top: 60px;font-weight: 500;">Donasi</h1>
+			<h1 style="position: absolute;left: 855px;top: 60px;font-weight: 500;">Kegiatan</h1>
+			<h1 style="position: absolute;left: 970px;top: 60px;font-weight: 500;">Tentang Kami</h1>	
 			</ul>
-		<img id="logos" style="top: 10px" alt="Logo Baitul Ihsan" src="img/logo.png">
+		<img id="logos" style="top: 10px;" alt="Logo Baitul Ihsan" src="img/logow.png">
 		</div>
 
 		<div id="shape">
-<!--			<img style="position: absolute; width: 410px; height: 301px; left: 500px; top: 100px; border-radius: 10px;" src="img/1.jpg">
--->
+
 		</div>
 		<div class="footer">
 			<img id="logow" src="img/logow.png">
